fixed styling for contact form and changed z-index of hover images

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -29,7 +29,7 @@
       padding: 20px 0;
       font-weight: 600;
       @media screen and (max-width: 800px) {
-        padding: 10px 0 0 0;
+        padding: 10px 0;
       }
       .logo {
         font-family: "Dancing Script", cursive;
