--- a/src/pages/contact/contact.page.styles.scss
+++ b/src/pages/contact/contact.page.styles.scss
@@ -30,11 +30,16 @@ $main-color: black;
       width: 100%;
       display: flex;
       flex-direction: column;
+      margin-top: -150px;
+      @media screen and (max-width: 800px) {
+        margin-top: 0;
+      }
 
       .contact-form {
         display: flex;
         flex-direction: column;
         width: 90%;
+
         @media screen and (max-width: 800px) {
           width: 100%;
         }
@@ -42,6 +47,7 @@ $main-color: black;
         .group {
           position: relative;
           margin: 0;
+          z-index: -1;
 
           .form-input {
             background: none;
